# Mad4Batch

./: README.md  mad4condor.py  pyproject.toml
src/Mad4Batch/: ROOT_skim.py  prep_hadd.py
src/Mad4Batch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mad4batch/: ROOT_multiskim.py  ROOT_skim.py  condor.py  prep_hadd.py  skim4condor.py
