[project]
name = "Mad4Batch"
version = "0.0.1"
authors = [
  { name="Ethan Simpson", email="ethansimpson285@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/els285/Mad4Batch"
